--- a/src/app/list-todos/list-todos.component.html
+++ b/src/app/list-todos/list-todos.component.html
@@ -1,4 +1,7 @@
-<h1>My Todo's</h1>
+<h1>Todo</h1>
+
+<div class="alert alert-success" *ngIf="mesaagge">{{mesaagge}}</div>
+
 
 <div class="container">
 <table class="table">
@@ -8,6 +11,8 @@
       <th>Description</th>
       <th>Target date</th>
       <th>is Completed?</th>
+      <th>Update</th>
+      <th>Delete</th>
     </tr>
   </thead>
   <tbody>
@@ -15,6 +20,8 @@
       <td>{{todo.description}}</td>
       <td>{{todo.targetDate | date}}</td>
       <td>{{todo.done}}</td>
+      <td><button (click)="updateTodo(todo.id)" class="btn btn-success">Update</button></td>
+      <td><button (click)="deleteTodo(todo.id)" class="btn btn-warning">Delete</button></td>
     </tr>
   </tbody>
 
