--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,13 +1,17 @@
 <h1>Todo</h1>
 <div class="container">
+  <div class="alert alert-warning" *ngIf="todoForm.dirty && todoForm.invalid">Enter valid values</div>
+  <div class="alert alert-warning" *ngIf="todoForm.dirty && targetDate.invalid">Enter valid date</div>
+  <div class="alert alert-warning" *ngIf="todoForm.dirty && description.invalid">Enter valid dascription</div>
+  <form (ngSubmit)="!todoForm.invalid && saveTodo()" #todoForm="ngForm">
   <fieldset class="form-group">
     <label>Description</label>
-      <input [(ngModel)]="todo.description" class="form-control" type="text" name="description" required="required">
+      <input #description="ngModel" [(ngModel)]="todo.description" class="form-control" type="text" name="description" required="required" minlength="5">
   </fieldset>
 <fieldset class="form-group">
   <label>Target date</label>
-  <input [ngModel]="todo.targetDate | date:'yyyy-MM-dd'" (ngModelChange)="todo.targetDate = $event" class="form-control" type="date" name="targetDate" required="required">
+  <input #targetDate="ngModel" [ngModel]="todo.targetDate | date:'yyyy-MM-dd'" (ngModelChange)="todo.targetDate = $event" class="form-control" type="date" name="targetDate" required="required">
 </fieldset>
-
-  <button class="btn btn-success" (click)="saveTodo()">Save</button>
+    <button type="submit" class="btn btn-success" >Save</button>
+  </form>
 </div>
