--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,6 +4,9 @@
   <div class="alert alert-warning" *ngIf="invalidLogin">Login failed</div>
   Username: <input type="text" name="usernmae" [(ngModel)]="username">
   Password:  <input type="password" name="password" [(ngModel)]="password">
-  <button (click)="handleLogin()" class="btn btn-success">Login</button>
+
+
+  <!--<button (click)="handleLogin()" class="btn btn-success">Login</button>-->
+  <button (click)="handleBasicAuthLogin()" class="btn btn-success">Login</button>
 
 </div>
